Update package.json and pnpm-lock.yaml to add new test command and update mongodb dependency; enhance systemPatterns.md with critical workflow syntax and server startup commands; register new nodes in Nodes.ts for user profile and workflow CRUD operations.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "docker:clean": "docker system prune -f && docker volume prune -f",
     "setup:db": "DB_HOST=localhost DB_PASSWORD=blok123 node setup-database.js",
     "test:auth": "node tests/auth.test.js",
-    "test:simple": "node tests/simple-server.test.js"
+    "test:simple": "node tests/simple-server.test.js",
+    "test:phase2": "node tests/phase2.test.js"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
@@ -58,6 +59,7 @@
     "@opentelemetry/semantic-conventions": "^1.30.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongodb": "^4.0.7",
     "ai": "^4.1.50",
     "bcrypt": "^6.0.0",
     "body-parser": "1.20.3",
@@ -65,7 +67,7 @@
     "ejs": "^3.1.10",
     "express": "4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.14.2",
+    "mongodb": "^6.17.0",
     "pg": "^8.13.3",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
