Refactor package.json to streamline development scripts using concurrently for backend and frontend, and add new dependencies in pnpm-lock.yaml. Enhance client-side components with toast notifications and improve workflow data structures in API interfaces. Update CreateWorkflowPage and DashboardPage for better user experience and functionality.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "Apache-2.0",
   "scripts": {
-    "dev": "nanoctl dev",
+    "dev": "concurrently --names \"backend,frontend\" --prefix-colors \"blue,green\" \"nanoctl dev\" \"cd client && npm run dev\"",
+    "dev:backend": "nanoctl dev",
+    "dev:frontend": "cd client && npm run dev",
     "start": "node dist/index.js",
     "reload": "node -r ts-node/register --env-file=.env.local ./src/index.ts",
     "build": "rimraf ./dist && tsc && copyfiles -u 1 src/nodes/**/*.html src/nodes/**/*.md dist/",
@@ -37,6 +39,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
     "@types/pg": "^8.11.11",
+    "concurrently": "^9.1.2",
     "copyfiles": "^2.4.1",
     "nanoctl": "^0.1.14",
     "nodemon": "^3.1.9",
