--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "express": "4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
+    "openai": "^5.1.1",
     "pg": "^8.13.3",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
